fixed side bar covering body

--- a/Garage3.0/wwwroot/css/site.css
+++ b/Garage3.0/wwwroot/css/site.css
@@ -5,7 +5,11 @@ body {
     color: #888;
     line-height: 30px;
     text-align: center;
-    background-color:#131313
+    background-color:#131313    
+}
+
+.content{
+    margin-left:250px;
 }
 
 strong {
